fix: correting alignment of card

--- a/src/styles/dashboard.css
+++ b/src/styles/dashboard.css
@@ -17,6 +17,5 @@
   display: flex;
   flex-direction: row;
   gap: 5rem;
-  align-items: center;
   justify-content: center;
 }
